--- a/src/js/components/Game/Game.css
+++ b/src/js/components/Game/Game.css
@@ -70,6 +70,7 @@
     font-size: 1.5em;
     background-color: #fff;
     color: #000;
+    border-style: solid;
     /* position: absolute;
     float: right;
     right: 100px;
